[gd_scene load_steps=66 format=3 uid="uid://ddhv81dvrtjb3"]

[ext_resource type="Script" path="res://Scripts/player.gd" id="1_e0se1"]
[ext_resource type="Shader" path="res://Scenes/player.gdshader" id="2_n73ur"]
[ext_resource type="Texture2D" uid="uid://c7oo0oelwxbe6" path="res://Assets/Player Sprite/player_idle.png" id="3_mf4u5"]
[ext_resource type="Texture2D" uid="uid://dvvmjvo8hspcg" path="res://Assets/Player Sprite/player-climb-side.png" id="3_r8cay"]
[ext_resource type="Texture2D" uid="uid://c44x7kb8pjcni" path="res://Assets/Player Sprite/fall.png" id="4_amnaq"]
[ext_resource type="Texture2D" uid="uid://bua5qi3vgew4" path="res://Assets/Player Sprite/climb_ledge.png" id="4_kg5qo"]
[ext_resource type="Texture2D" uid="uid://be42x8p7yp65u" path="res://Assets/Player Sprite/player_close_door.png" id="4_mkaq1"]
[ext_resource type="Texture2D" uid="uid://cc6wbqjfnrfj3" path="res://Assets/Player Sprite/player_pistol_jump-jump.png" id="4_t4nrx"]
[ext_resource type="Texture2D" uid="uid://dlyjntdemxt3d" path="res://Assets/Player Sprite/player_run_without_arm.png" id="5_biwir"]
[ext_resource type="PackedScene" uid="uid://bymo4b7emw3qo" path="res://Scenes/Components/health_component.tscn" id="6_xwy6r"]
[ext_resource type="PackedScene" uid="uid://k7o0o1pidjrf" path="res://Scenes/Components/hurt_box_component.tscn" id="7_6bgoq"]
[ext_resource type="Texture2D" uid="uid://cx4tr37dxheuw" path="res://Assets/Player Sprite/player_open_door.png" id="8_1cvdk"]
[ext_resource type="Texture2D" uid="uid://bjt14ljipmrev" path="res://Assets/Player Sprite/player_idle_with arms.png" id="8_8yay8"]
[ext_resource type="AudioStream" uid="uid://dk0vudek7j813" path="res://Assets/Audio/SFX/PlayerSFX/05. Damage Grunt (Male).wav" id="9_rgoey"]
[ext_resource type="Script" path="res://Scripts/StateMachine/state_machine.gd" id="11_o4213"]
[ext_resource type="Texture2D" uid="uid://cu5gew4snqr25" path="res://Assets/Player Sprite/player_walk with arm.png" id="11_ym0jh"]
[ext_resource type="Script" path="res://Scripts/StateMachine/player_idle_state.gd" id="12_e7h83"]
[ext_resource type="Script" path="res://Scripts/StateMachine/player_run_state.gd" id="13_u236u"]
[ext_resource type="Script" path="res://Scripts/StateMachine/player_climb_state.gd" id="14_4qdod"]
[ext_resource type="Script" path="res://Scripts/StateMachine/player_jump_state.gd" id="15_0uodt"]
[ext_resource type="Script" path="res://Scripts/StateMachine/player_fall_state.gd" id="15_4ki7g"]
[ext_resource type="Script" path="res://Scripts/StateMachine/player_climb_ledge_state.gd" id="20_xygf4"]
[ext_resource type="Script" path="res://Scenes/player_off_state.gd" id="23_cyjib"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_pupvq"]
radius = 5.0
height = 32.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_6eh7k"]
resource_local_to_scene = true
shader = ExtResource("2_n73ur")
shader_parameter/blink_color = Color(1, 0, 0, 1)
shader_parameter/blink_intensity = 0.0

[sub_resource type="AtlasTexture" id="AtlasTexture_k7lba"]
atlas = ExtResource("3_r8cay")
region = Rect2(0, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_4sv6k"]
atlas = ExtResource("3_r8cay")
region = Rect2(48, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_qkgve"]
atlas = ExtResource("3_r8cay")
region = Rect2(96, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_opst7"]
atlas = ExtResource("3_r8cay")
region = Rect2(144, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_tm4qo"]
atlas = ExtResource("4_kg5qo")
region = Rect2(0, 0, 48, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_70q41"]
atlas = ExtResource("4_kg5qo")
region = Rect2(48, 0, 48, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_y6j22"]
atlas = ExtResource("4_kg5qo")
region = Rect2(96, 0, 48, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_euksp"]
atlas = ExtResource("4_kg5qo")
region = Rect2(144, 0, 48, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_attkf"]
atlas = ExtResource("4_mkaq1")
region = Rect2(0, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_kbxqi"]
atlas = ExtResource("4_mkaq1")
region = Rect2(48, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_6l4sc"]
atlas = ExtResource("4_amnaq")
region = Rect2(0, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_o0a4y"]
atlas = ExtResource("4_amnaq")
region = Rect2(48, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_tm88j"]
atlas = ExtResource("3_mf4u5")
region = Rect2(0, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_h48ac"]
atlas = ExtResource("3_mf4u5")
region = Rect2(48, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_ktdct"]
atlas = ExtResource("3_mf4u5")
region = Rect2(96, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_nep84"]
atlas = ExtResource("3_mf4u5")
region = Rect2(144, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_3r3cv"]
atlas = ExtResource("8_8yay8")
region = Rect2(0, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_41yik"]
atlas = ExtResource("8_8yay8")
region = Rect2(48, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_r2f5k"]
atlas = ExtResource("8_8yay8")
region = Rect2(96, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_ukpc0"]
atlas = ExtResource("8_8yay8")
region = Rect2(144, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_2vw1q"]
atlas = ExtResource("4_t4nrx")
region = Rect2(0, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_1y88t"]
atlas = ExtResource("4_t4nrx")
region = Rect2(48, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_5y7mb"]
atlas = ExtResource("4_t4nrx")
region = Rect2(96, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_7014x"]
atlas = ExtResource("8_1cvdk")
region = Rect2(0, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_borq4"]
atlas = ExtResource("8_1cvdk")
region = Rect2(48, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_k5ntr"]
atlas = ExtResource("5_biwir")
region = Rect2(0, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_5r5tq"]
atlas = ExtResource("5_biwir")
region = Rect2(48, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_qcomb"]
atlas = ExtResource("5_biwir")
region = Rect2(96, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_ubgcl"]
atlas = ExtResource("5_biwir")
region = Rect2(144, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_l3h8k"]
atlas = ExtResource("5_biwir")
region = Rect2(192, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_7ptje"]
atlas = ExtResource("5_biwir")
region = Rect2(240, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_18hw0"]
atlas = ExtResource("11_ym0jh")
region = Rect2(0, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_dpar0"]
atlas = ExtResource("11_ym0jh")
region = Rect2(48, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_51qlf"]
atlas = ExtResource("11_ym0jh")
region = Rect2(96, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_bktf5"]
atlas = ExtResource("11_ym0jh")
region = Rect2(144, 0, 48, 48)

[sub_resource type="SpriteFrames" id="SpriteFrames_6wen4"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_k7lba")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4sv6k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qkgve")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_opst7")
}],
"loop": true,
"name": &"climb",
"speed": 6.0
}, {
"frames": [{
"duration": 1.2,
"texture": SubResource("AtlasTexture_tm4qo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_70q41")
}, {
"duration": 2.0,
"texture": SubResource("AtlasTexture_y6j22")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_euksp")
}],
"loop": false,
"name": &"climb_ledge",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_attkf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kbxqi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_attkf")
}],
"loop": false,
"name": &"close_door",
"speed": 3.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_6l4sc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o0a4y")
}],
"loop": true,
"name": &"fall",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_tm88j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h48ac")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ktdct")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nep84")
}],
"loop": true,
"name": &"idle",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_3r3cv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_41yik")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r2f5k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ukpc0")
}],
"loop": true,
"name": &"idle_with_arm",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_2vw1q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2vw1q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1y88t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5y7mb")
}],
"loop": false,
"name": &"jump",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_7014x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_borq4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7014x")
}],
"loop": false,
"name": &"open_door",
"speed": 3.0
}, {
"frames": [{
"duration": 1.4,
"texture": SubResource("AtlasTexture_k5ntr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5r5tq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qcomb")
}, {
"duration": 1.4,
"texture": SubResource("AtlasTexture_ubgcl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l3h8k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7ptje")
}],
"loop": true,
"name": &"run",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_18hw0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dpar0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_51qlf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bktf5")
}],
"loop": true,
"name": &"walk",
"speed": 5.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_cdnb3"]
radius = 11.887
height = 23.774

[sub_resource type="Animation" id="Animation_osq84"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_t1vel"]
resource_name = "blink_hurt"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8, 0.9, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [true, false, true, false, true, false, true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_jnw16"]
_data = {
"RESET": SubResource("Animation_osq84"),
"blink_hurt": SubResource("Animation_t1vel")
}

[node name="Player" type="CharacterBody2D" groups=["player"]]
z_index = 5
collision_mask = 640
script = ExtResource("1_e0se1")
grenade_count = 7

[node name="PlayerCollider" type="CollisionShape2D" parent="." groups=["player"]]
position = Vector2(3, 1)
shape = SubResource("CapsuleShape2D_pupvq")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
z_index = 4000
material = SubResource("ShaderMaterial_6eh7k")
sprite_frames = SubResource("SpriteFrames_6wen4")
animation = &"idle"
autoplay = "idle_with_arm"
offset = Vector2(0, -7)

[node name="HealthComponent" parent="." instance=ExtResource("6_xwy6r")]
max_health = 6

[node name="HurtBoxComponent" parent="." node_paths=PackedStringArray("health_component") groups=["player"] instance=ExtResource("7_6bgoq")]
collision_layer = 256
collision_mask = 48
health_component = NodePath("../HealthComponent")

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtBoxComponent"]
visible = false
position = Vector2(0, 1)
scale = Vector2(0.673004, 1.47183)
shape = SubResource("CapsuleShape2D_cdnb3")

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]
position = Vector2(0.5, -2.02656e-06)
scale = Vector2(1.55, 2.8)

[node name="HurtSFX" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("9_rgoey")

[node name="StateMachine" type="Node" parent="." node_paths=PackedStringArray("initial_state")]
script = ExtResource("11_o4213")
initial_state = NodePath("Idle")

[node name="Idle" type="Node" parent="StateMachine"]
script = ExtResource("12_e7h83")
slow_down_speed = 250

[node name="Run" type="Node" parent="StateMachine"]
script = ExtResource("13_u236u")
speed = 100
max_horizontal_speed = 60

[node name="Climb" type="Node" parent="StateMachine"]
script = ExtResource("14_4qdod")

[node name="Jump" type="Node" parent="StateMachine"]
script = ExtResource("15_0uodt")
jump_height = -250
jump_horizontal_speed = 65
max_jump_horizontal_speed = 65
jump_gravity = 860

[node name="Fall" type="Node" parent="StateMachine"]
script = ExtResource("15_4ki7g")
speed = 75

[node name="ClimbLedge" type="Node" parent="StateMachine"]
script = ExtResource("20_xygf4")

[node name="Off" type="Node" parent="StateMachine"]
script = ExtResource("23_cyjib")

[node name="RayCastUp" type="RayCast2D" parent="."]
position = Vector2(4, -11)
target_position = Vector2(0, -9)
collision_mask = 1024
hit_from_inside = true
collide_with_areas = true
collide_with_bodies = false

[node name="RayCastFront" type="RayCast2D" parent="."]
position = Vector2(-3, 0)
target_position = Vector2(19, 0)
collision_mask = 1024
collide_with_areas = true
collide_with_bodies = false

[node name="Hurt" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_jnw16")
}

[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
[connection signal="health_changed" from="HealthComponent" to="." method="_on_health_component_health_changed"]
[connection signal="area_entered" from="HurtBoxComponent" to="." method="_on_hurt_box_component_area_entered"]
[connection signal="being_hit" from="HurtBoxComponent" to="." method="_on_hurt_box_component_being_hit"]
[connection signal="body_entered" from="HurtBoxComponent" to="." method="_on_hurt_box_component_body_entered"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
